logs/vim-debug.log
Listing '.'...
Listing './bin'...
Compiling './bin/install-vim-debug.py'...
***   File "./bin/install-vim-debug.py", line 62
    print 'installing to %s' % fname
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vim_debug'...
Compiling './lib/python3.5/site-packages/vim_debug/_commands.py'...
***   File "./lib/python3.5/site-packages/vim_debug/_commands.py", line 47
    print '[usage:] dbg command [options]'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vim_debug/commands.py'...
***   File "./lib/python3.5/site-packages/vim_debug/commands.py", line 28
    print '[usage:] dbg command [options]'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vim_debug/dbgp.py'...
***   File "./lib/python3.5/site-packages/vim_debug/dbgp.py", line 57
    print 'weird -- received is greater than the id I just got: %d %d' % (self.received, id)
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vim_debug/debugger.py'...
***   File "./lib/python3.5/site-packages/vim_debug/debugger.py", line 184
    print 'Debugger.handle_'+fc.tagName+'() not found, please see the LOG___WINDOW'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vim_debug/new_debugger.py'...
***   File "./lib/python3.5/site-packages/vim_debug/new_debugger.py", line 100
    print 'failed to start a browser. aborting debug session'
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vim_debug/protocol.py'...
***   File "./lib/python3.5/site-packages/vim_debug/protocol.py", line 15
    print 'waiting for a new connection on port '+str(self.port)+' for 5 seconds...'
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vim_debug/ui.py'...
***   File "./lib/python3.5/site-packages/vim_debug/ui.py", line 142
    print 'failed to remove', bid
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vim_debug-1.5.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
